# EnsPrecipPP

./: ~$包创建和上传.pptx  包创建和上传.pptx
ensprecippp/: CONTRIBUTING.md  README.md  justfile  pyproject.toml
ensprecippp/.github/: ISSUE_TEMPLATE.md
ensprecippp/docs/: index.md  installation.md  usage.md
ensprecippp/src/ensprecippp/: __init__.py  cli.py
ensprecippp/tests/: __init__.py  test_ensprecippp.py
