[project]
name = "ensprecippp"
version = "0.1.0"
description = "A python package for post-processing and verification of ensemble precipitation forecasts."
readme = "README.md"
authors = [
  {name = "Fuxuan Jiang", email = "JungleSYSU2020@163.com"}
]
maintainers = [
  {name = "Fuxuan Jiang", email = "JungleSYSU2020@163.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/Curallin/ensprecippp/issues"
changelog = "https://github.com/Curallin/ensprecippp/blob/master/changelog.md"
homepage = "https://github.com/Curallin/ensprecippp"

[project.scripts]
ensprecippp = "ensprecippp.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
